# HGE

./: CMakeLists.txt
src/core/: CMakeLists.txt  graphics.cpp  random.cpp  system.cpp
src/helpers/: CMakeLists.txt
